1.986 修正無法輸入問題