@@ -716,7 +716,7 @@ public class InsertSpend extends Fragment {
             }
 
             try {
-                if (Common.nf.parse(money.getText().toString().trim()) == 0) {
+                if (Common.nf.parse(money.getText().toString().trim()).doubleValue() == 0) {
                     money.setError("金額不能為0");
                     return;
                 }
@@ -738,7 +738,7 @@ public class InsertSpend extends Fragment {
                     return;
                 }
                 try {
-                    new Integer(CheckNul.substring(2));
+                    Integer.valueOf(CheckNul.substring(2));
                 } catch (NumberFormatException e) {
                     number.setError("統一發票後8碼為數字");
                     return;
