@@ -340,7 +340,7 @@ public class UpdateInvoice extends Fragment {
             }
 
             try {
-                if (Integer.valueOf(money.getText().toString().trim()) == 0) {
+                if (Common.nf.parse(money.getText().toString().trim()).doubleValue() == 0) {
                     money.setError("金額不能為0");
                     return;
                 }
@@ -362,7 +362,7 @@ public class UpdateInvoice extends Fragment {
                     return;
                 }
                 try {
-                    new Integer(CheckNul.substring(2));
+                    Integer.valueOf(CheckNul.substring(2));
                 } catch (NumberFormatException e) {
                     number.setError("統一發票後8碼為數字");
                     return;
